# Sierpinski-triangle

./: CMakeLists.txt  main.cpp
